force-app/main/default/objects/Refinance_Loan_Purpose__c/Refinance_Loan_Purpose__c.object-meta.xml
<CustomObject>
    <label>Refinance Loan Purpose</label>
    <nameField>
        <displayFormat>R-{0000000000}</displayFormat>
        <label>Refinance  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Refinance Loan Purposes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>