force-app/main/default/objects/Refinance_Loan_Purpose__c/fields/Amount_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Amount_Confirmed__c</fullName>
    <label>Amount Confirmed</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>