force-app/main/default/objects/Refinance_Loan_Purpose__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <label>Application</label>
    <referenceTo>genesis__Applications__c</referenceTo>
    <relationshipLabel>Refinance Loan Purposes</relationshipLabel>
    <relationshipName>Refinance_Loan_Purposes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>