force-app/main/default/objects/Refinance_Loan_Purpose__c/fields/Debt_Consolidation_Description__c.field-meta.xml
<CustomField>
    <fullName>Debt_Consolidation_Description__c</fullName>
    <label>Debt Consolidation Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>