force-app/main/default/objects/Refinance_Loan_Purpose__c/fields/Mortgage_Description__c.field-meta.xml
<CustomField>
    <fullName>Mortgage_Description__c</fullName>
    <label>Mortgage Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>