force-app/main/default/objects/Refinance_Loan_Purpose__c/fields/Refinance_Amount_Confirm__c.field-meta.xml
<CustomField>
    <fullName>Refinance_Amount_Confirm__c</fullName>
    <label>Refinance Amount Confirm</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>