force-app/main/default/objects/Refinance_Loan_Purpose__c/fields/Refinance_Mortgages_Amount__c.field-meta.xml
<CustomField>
    <fullName>Refinance_Mortgages_Amount__c</fullName>
    <label>Refinance Mortgages Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>